workshops/W01/errors.txt
io.cpp: In function ‘void seneca::printBook(seneca::PhoneRec**, size_t, const char*)’:
io.cpp:69:23: warning: statement has no effect [-Wunused-value]
         for (rowNumber; rowNumber < bookSize; rowNumber++){
                       ^
main_prof.cpp: In function ‘int main()’:
main_prof.cpp:46:42: error: ‘read’ was not declared in this scope
       for (; read(recs[recordsRead], file); recordsRead++);
                                          ^
main_prof.cpp:57:39: error: ‘print’ was not declared in this scope
             print(recPtrs, recordsRead);
                                       ^
main_prof.cpp:60:44: error: ‘sort’ was not declared in this scope
             sort(recPtrs, recordsRead, true);
                                            ^
main_prof.cpp:76:22: error: ‘read’ was not declared in this scope
             read(name);
                      ^
